Fixed About section on mobile view

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -68,7 +68,10 @@
     flex-direction: column;
   }
 
-  .about-left,
+  .about-left {
+    display: none;
+  }
+
   .about-right {
     flex: none;
     width: 100%;
